Fix dark mode + DaisyUI 5 issue. Was super ugly in dark mode. Now always use our template.
Also: update docs to mention how to re-enable (so easy, it was done by default). Remove older daisyUI 4 community extension, as it probably won't work any longer.

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 
 @plugin '@tailwindcss/typography';
-@plugin "daisyui";
+@plugin "daisyui" {
+  /* Disable all other themes which forces the default theme created below. You can add a dark mode theme using daisyui if you like, and it will automatically use it when the user's system is in dark mode. Docs: https://daisyui.com/docs/themes/ */
+  themes: false;
+}
 
 @plugin "daisyui/theme" {
   name: "saasstartertheme";
